--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
             <version>3.0.4</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     
